Closed Bug 87118 Opened 24 years ago Closed 24 years ago

Trunk HTTPConnection crash [@ nsHttpConnectionInfo::Equals]

Categories

(Core :: Networking: HTTP, defect, P1)

x86
Windows 98
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: greer, Assigned: darin.moz)

References

Details

(Keywords: crash, topcrash, Whiteboard: [PDT+] r=gagan,bbaetz sr=dougt a=chofmann critical for 0.9.2)

Crash Data

Attachments

(1 file)

Talkback only picked up three of these in the 6/21 reports but if it looks like it could get fixed (or duped) with the other HTTPConnection bugs, hopefully before M092. sHttpConnectionInfo::Equals 3 First BBID : http://climate/reports/stackcommentemail.cfm?dynamicBBID=31980006 Last BBID : http://climate/reports/stackcommentemail.cfm?dynamicBBID=31989456 Min Runtime :41 Max Runtime :13286 Min seconds since last crash :41 Max seconds since last crash :7587 First Appearance Date : 2001-06-20 Last Appearance Date : 2001-06-21 First Build ID : 2001062009 Latest Build ID : 2001062020 Stack Trace: nsHttpConnectionInfo::Equals [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpConnection.h line 181] nsHttpHandler::CountIdleConnections [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpHandler.cpp line 800] nsHttpHandler::ReclaimConnection [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpHandler.cpp line 392] NECKO.DLL + 0x336a4 (0x607f36a4) nsHttpConnection::AddRef [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpConnection.cpp line 485] nsSocketTransportService::AddRef 0x85107d8b nsHttpConnectionInfo::Equals dea21654 http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/protocol/http/src/ns HttpConnection.h line 181 Build: 2001062020 CrashDate: 2001-06-21 UptimeMinutes: 0 Total: 0 OS: Windows 98 4.10 build 67766446 Detailed : http://climate/reports/incidenttemplate.cfm?bbid=31989456 StackTrace: http://climate/reports/stackcommentemail.cfm?dynamicBBID=31989456 (31989456) URL: www.sf.se (31989456) Comments: Choose "Kommande filmer" and select "juni" nsHttpConnectionInfo::Equals f2373036 http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/protocol/http/src/ns HttpConnection.h line 181 Build: 2001062009 CrashDate: 2001-06-20 UptimeMinutes: 126 Total: 221 OS: Windows 98 4.10 build 67766446 Detailed : http://climate/reports/incidenttemplate.cfm?bbid=31981567 StackTrace: http://climate/reports/stackcommentemail.cfm?dynamicBBID=31981567 (31981567) URL: http://books.bitway.ne.jp/ nsHttpConnectionInfo::Equals 657ef48c http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/protocol/http/src/ns HttpConnection.h line 181 Build: 2001062009 CrashDate: 2001-06-20 UptimeMinutes: 30 Total: 30 OS: Windows 98 4.90 build 73010104 Detailed : http://climate/reports/incidenttemplate.cfm?bbid=31980006 StackTrace: http://climate/reports/stackcommentemail.cfm?dynamicBBID=31980006
Keywords: crash, topcrash
darin, related to bug 86973 and bug 85822
Assignee: neeti → darin
fortunately, i'm seeing this on my winnt debug build :-)
Status: NEW → ASSIGNED
Attached patch fixes the crashSplinter Review
pushing for 0.9.2
Priority: -- → P1
Target Milestone: --- → mozilla0.9.2
r=bbaetz
r=gagan
Whiteboard: PDT+
Whiteboard: PDT+ → [PDT+] r=gagan,bbaetz sr=? a=?
sr=dougt
a=chofmann
Whiteboard: [PDT+] r=gagan,bbaetz sr=? a=? → [PDT+] r=gagan,bbaetz sr=dougt a=chofmann critical for 0.9.2
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 87104 has been marked as a duplicate of this bug. ***
code verification to bradley...
QA Contact: benc → bbaetz
We no longer crash every 10 minutes, so VERIFYING.
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsHttpConnectionInfo::Equals]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: