Fixes bug 87118 "Trunk HTTPConnection crash [@ nsHttpConnectionInfo::Equals]" r=gagan,bbaetz sr=dougt a=chofmann